Update authors in publications.html

--- a/publications.html
+++ b/publications.html
@@ -145,7 +145,7 @@
   {
     "title": "A do it yourself (DIY) point-of-care wrist ultrasound phantom for joint access training",
     "url": "https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ETbbsnoAAAAJ&sortby=pubdate&citation_for_view=ETbbsnoAAAAJ:hqOjcs7Dif8C",
-    "authors": ["CM Andrea Cheng", "Justin Zhou", "Chun Hei Ryan Chan", "Connie Chen", "Charlotte Cheng"],
+    "authors": ["C Miranda", "A Cheng", "J Zhou", "C H R Chan", "C Chen", "C Cheng", "K Storm", "A Zhou", "A Mao", "W J Kuk", "T C Fong", "I Villagran"],
     "venue": "The Ultrasound Journal 16 (32)",
     "year": 2024,
     "type": "journal",
@@ -155,7 +155,7 @@
   {
     "title": "Design and Evaluation of a Spoke-Based Double-Lumen Pediatric Gastrostomy Tube",
     "url": "https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ETbbsnoAAAAJ&sortby=pubdate&citation_for_view=ETbbsnoAAAAJ:Se3iqnhoufwC",
-    "authors": ["M Aedla", "CJ Cheng", "AY Zhou", "S Zhang", "J Hsu", "K Hu", "JC Qian", "KV Sompel"],
+    "authors": ["M Aedla*", "CJ Cheng*", "AY Zhou*", "S Zhang", "J Hsu", "K Hu", "JC Qian", "KV Sompel", "A Ho", "KV Sharma", "EA Logsdon"],
     "venue": "Children 11 (2), 263",
     "year": 2024,
     "type": "journal",
@@ -165,7 +165,7 @@
   {
     "title": "Nanofiber nerve caps to inhibit neuroma formation",
     "url": "https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ETbbsnoAAAAJ&sortby=pubdate&citation_for_view=ETbbsnoAAAAJ:0EnyYjriUFMC",
-    "authors": ["HQ Mao", "S Tuffaha", "A Hoke", "AY Zhou", "BP Enzmann", "M James Lan"],
+    "authors": ["HQ Mao", "S Tuffaha", "A Hoke", "AY Zhou", "BP Enzmann", "MJ Lan", "E Lee", "R Mi", "R Martin"],
     "venue": "WO Patent 178191A2, 2024",
     "year": 2024,
     "type": "patent",
@@ -175,7 +175,7 @@
   {
     "title": "Retractable low-profile pediatric gastrostomy tube and uses thereof",
     "url": "https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ETbbsnoAAAAJ&sortby=pubdate&citation_for_view=ETbbsnoAAAAJ:LkGwnXOMwfcC",
-    "authors": ["M Aedla", "K Sharma", "S Zhang", "J Qian", "C Cheng", "J Hsu", "A Zhou"],
+    "authors": ["M Aedla", "K Sharma", "S Zhang", "J Qian", "C Cheng", "J Hsu", "A Zhou", "K Hu", "K Sompel"],
     "venue": "WO Patent 0238164A1, 2024",
     "year": 2024,
     "type": "patent",
@@ -185,7 +185,7 @@
   {
     "title": "SAEM24 A novel ultrasound-guided wrist arthrocentesis task trainer for procedural teaching and assessment",
     "url": "https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ETbbsnoAAAAJ&sortby=pubdate&citation_for_view=ETbbsnoAAAAJ:UebtZRa9Y70C",
-    "authors": ["TF Won-Jun Kuk", "Justin Zhou", "Chun Hei Chan", "Kaitlyn Storm", "Charlotte Cheng"],
+    "authors": ["T Fong", "WJ Kuk", "J Zhou", "CH Chan", "K Storm", "C Cheng", "A Zhou", "A Cheng", "C Chen", "A Mao", "JC Rice", "GT Miller", "J Albayda"],
     "venue": "ACADEMIC EMERGENCY MEDICINE",
     "year": 2024,
     "type": "abstract",
@@ -205,7 +205,7 @@
   {
     "title": "A Study of Postoperative Complications Occurring at Home with Pediatric Gastrostomy Feeding Tubes",
     "url": "https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ETbbsnoAAAAJ&sortby=pubdate&citation_for_view=ETbbsnoAAAAJ:YsMSGLbcyi4C",
-    "authors": ["M Aedla", "A Zhou", "K Sompel", "K Hu", "C Cheng", "J Hsu", "J Qian", "S Zhang", "A Ho"],
+    "authors": ["M Aedla", "A Zhou", "K Sompel", "K Hu", "C Cheng", "J Hsu", "J Qian", "S Zhang", "A Ho", "J Slagle", "EA Logsdon", "KV Sharma", "CR Weiss"],
     "venue": "Journal of Pediatric Gastroenterology and Nutrition 75, 10.1097",
     "year": 2022,
     "type": "journal",
@@ -235,7 +235,7 @@
   {
     "title": "P18. A NOVEL BIOENGINEERED CONDUIT REDUCES NEUROMA FORMATION AFTER TARGETED MUSCLE REINNERVATION",
     "url": "https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ETbbsnoAAAAJ&sortby=pubdate&citation_for_view=ETbbsnoAAAAJ:W7OEmFMy1HYC",
-    "authors": ["E Lee", "B Enzmann", "T Harris", "A Wong", "S Pinni", "N von Guionneau"],
+    "authors": ["E Lee", "B Enzmann", "T Harris", "A Wong", "S Pinni", "NV Guionneau", "R Kothari", "M Lan", "C Qiu", "A Zhou", "A Lee", "J Shores", "A Latremoliere", "L Qu", "A Hoke", "H Q Mao", "S Tuffaha"],
     "venue": "Plastic and Reconstructive Surgery–Global Open 10 (4S), 57-58",
     "year": 2022,
     "type": "abstract",
@@ -245,7 +245,7 @@
   {
     "title": "QS51. Guiding the Way: The Use of a Bioengineered Conduit Reduces Neuroma Formation and Associated Pain Behaviors",
     "url": "https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ETbbsnoAAAAJ&sortby=pubdate&citation_for_view=ETbbsnoAAAAJ:eQOLeE2rZwMC",
-    "authors": ["E Lee", "B Enzmann", "T Harris", "A Wong", "S Pinni", "N von Guionneau"],
+    "authors": ["E Lee", "B Enzmann", "T Harris", "A Wong", "S Pinni", "NV Guionneau", "R Kothari", "M Lan", "C Qiu", "A Zhou", "J Shores", "A Latremoliere", "L Qu", "A Hoke", "HQ Mao", "S Tuffaha"],
     "venue": "Plastic and Reconstructive Surgery–Global Open 10 (6S), 121",
     "year": 2022,
     "type": "abstract",
@@ -255,7 +255,7 @@
   {
     "title": "Improving nerve coaptation outcomes in targeted muscle reinnervation: a novel bioengineered device",
     "url": "https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ETbbsnoAAAAJ&sortby=pubdate&citation_for_view=ETbbsnoAAAAJ:qjMakFHDy7sC",
-    "authors": ["E Lee", "AL Wong", "S Pinni", "N Von Guionneau", "TGW Harris", "R Kothari"],
+    "authors": ["E Lee", "AL Wong", "S Pinni", "NV Guionneau", "TGW Harris", "R Kothari", "M Lan", "B Enzmann", "C Qiu", "A Zhou", "J Shores", "A Latremoliere", "A Hoke", "HQ Mao", "S Tuffaha"],
     "venue": "Plastic and Reconstructive Surgery–Global Open 9 (10S), 99-100",
     "year": 2021,
     "type": "abstract",
@@ -265,7 +265,7 @@
   {
     "title": "S1288 Varying and Prevalent Complications Associated With Pediatric Gastrostomy Tubes",
     "url": "https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ETbbsnoAAAAJ&sortby=pubdate&citation_for_view=ETbbsnoAAAAJ:2osOgNQ5qMEC",
-    "authors": ["M Aedla", "A Zhou", "K Sompel", "K Hu", "S Zhang", "J Qian", "C Cheng", "J Hsu"],
+    "authors": ["M Aedla", "A Zhou", "K Sompel", "K Hu", "S Zhang", "J Qian", "C Cheng", "J Hsu", "EA Logsdon", "KV Sharma", "C Weiss"],
     "venue": "Official journal of the American College of Gastroenterology | ACG 116, S592",
     "year": 2021,
     "type": "abstract",
