Update experience details for education and roles

--- a/experience.html
+++ b/experience.html
@@ -82,9 +82,9 @@
             <img src="images/stanford-med-logo.png" alt="Stanford School of Medicine">
           </div>
           <div class="exp-content">
-            <h3 class="exp-org">Stanford School of Medicine</h3>
+            <h3 class="exp-org">Stanford University School of Medicine</h3>
             <div class="exp-role">MD Candidate</div>
-            <div class="exp-period">2021 – Present</div>
+            <div class="exp-period">2024 – Present</div>
             <div class="exp-details">Knight-Hennessy Scholar</div>
           </div>
         </div>
@@ -94,10 +94,9 @@
             <img src="images/stanford-gsb-logo.png" alt="Stanford Graduate School of Business">
           </div>
           <div class="exp-content">
-            <h3 class="exp-org">Stanford Graduate School of Business</h3>
+            <h3 class="exp-org">Stanford University Graduate School of Business</h3>
             <div class="exp-role">MBA Candidate</div>
-            <div class="exp-period">Deferred Enrollment</div>
-            <div class="exp-details">Knight-Hennessy Scholar</div>
+            <div class="exp-details">Deferred Enrollment</div>
           </div>
         </div>
 
@@ -108,8 +107,8 @@
           <div class="exp-content">
             <h3 class="exp-org">Johns Hopkins University</h3>
             <div class="exp-role">BS, Biomedical Engineering</div>
-            <div class="exp-period">2015 – 2019</div>
-            <div class="exp-details">Hodson Trust Scholar · Provost's Undergraduate Research Award</div>
+            <div class="exp-period">2019 – 2022</div>
+            <div class="exp-details">General Honors & Departmental Honors in Applied Mathematics and Statistics</div>
           </div>
         </div>
       </section>
@@ -124,8 +123,8 @@
           </div>
           <div class="exp-content">
             <h3 class="exp-org">Microsoft Research</h3>
-            <div class="exp-role">Strategy Lead, Health Futures</div>
-            <div class="exp-period">2023</div>
+            <div class="exp-role">Research Intern, Health Futures</div>
+            <div class="exp-period">2025</div>
           </div>
         </div>
 
@@ -135,8 +134,8 @@
           </div>
           <div class="exp-content">
             <h3 class="exp-org">Schrödinger</h3>
-            <div class="exp-role">Pipeline Strategy Intern</div>
-            <div class="exp-period">2022</div>
+            <div class="exp-role">Pipeline Strategy</div>
+            <div class="exp-period">2023</div>
           </div>
         </div>
 
@@ -146,8 +145,8 @@
           </div>
           <div class="exp-content">
             <h3 class="exp-org">Invive</h3>
-            <div class="exp-role">Strategy Consultant</div>
-            <div class="exp-period">2020 – 2021</div>
+            <div class="exp-role">Market Intelligence</div>
+            <div class="exp-period">2023</div>
           </div>
         </div>
       </section>
@@ -162,8 +161,8 @@
           </div>
           <div class="exp-content">
             <h3 class="exp-org">Pear VC</h3>
-            <div class="exp-role">Venture Fellow, Health + Bio</div>
-            <div class="exp-period">2024 – Present</div>
+            <div class="exp-role">Venture Fellow, Healthcare + Biotech</div>
+            <div class="exp-period">2025 – Present</div>
           </div>
         </div>
 
@@ -173,8 +172,8 @@
           </div>
           <div class="exp-content">
             <h3 class="exp-org">Bain & Company</h3>
-            <div class="exp-role">Associate Consultant, Private Equity</div>
-            <div class="exp-period">2019 – 2021</div>
+            <div class="exp-role">Associate Consultant</div>
+            <div class="exp-period">2023 – 2024</div>
           </div>
         </div>
 
@@ -185,7 +184,7 @@
           <div class="exp-content">
             <h3 class="exp-org">Arkitekt Ventures</h3>
             <div class="exp-role">Venture Fellow</div>
-            <div class="exp-period">2021 – 2022</div>
+            <div class="exp-period">2023 – 2024</div>
           </div>
         </div>
 
@@ -195,8 +194,8 @@
           </div>
           <div class="exp-content">
             <h3 class="exp-org">Johns Hopkins Technology Ventures</h3>
-            <div class="exp-role">Business Development Intern</div>
-            <div class="exp-period">2018 – 2019</div>
+            <div class="exp-role">Commercialization Fellow</div>
+            <div class="exp-period">2020 – 2023</div>
           </div>
         </div>
 
@@ -206,8 +205,8 @@
           </div>
           <div class="exp-content">
             <h3 class="exp-org">Health Advances</h3>
-            <div class="exp-role">Strategy Consultant</div>
-            <div class="exp-period">2018</div>
+            <div class="exp-role">Analyst Intern</div>
+            <div class="exp-period">2022</div>
           </div>
         </div>
       </section>
