--- a/publications.html
+++ b/publications.html
@@ -205,7 +205,7 @@
   {
     "title": "A Study of Postoperative Complications Occurring at Home with Pediatric Gastrostomy Feeding Tubes",
     "url": "https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ETbbsnoAAAAJ&sortby=pubdate&citation_for_view=ETbbsnoAAAAJ:YsMSGLbcyi4C",
-    "authors": ["M Aedla", "A Zhou", "K Sompel", "K Hu", "C Cheng", "J Hsu", "J Qian", "S Zhang", "A Ho", "J Slagle", "EA Logsdon", "KV Sharma", "CR Weiss"],
+    "authors": ["M Aedla*", "A Zhou*", "K Sompel", "K Hu", "C Cheng", "J Hsu", "J Qian", "S Zhang", "A Ho", "J Slagle", "EA Logsdon", "KV Sharma", "CR Weiss"],
     "venue": "Journal of Pediatric Gastroenterology and Nutrition 75, 10.1097",
     "year": 2022,
     "type": "journal",
