Update publication metadata in research.html

--- a/research.html
+++ b/research.html
@@ -149,7 +149,7 @@
             <h4 class="pub-title">
               <a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ETbbsnoAAAAJ&sortby=pubdate&citation_for_view=ETbbsnoAAAAJ:0EnyYjriUFMC" target="_blank" rel="noopener">Nanofiber nerve caps to inhibit neuroma formation</a>
             </h4>
-            <div class="pub-meta">HQ Mao, S Tuffaha, A Hoke, <strong>AY Zhou</strong>, BP Enzmann, M James Lan • WO Patent 178191A2, 2024 • Patent • 2024</div>
+            <div class="pub-meta">HQ Mao, S Tuffaha, A Hoke, <strong>AY Zhou</strong>, BP Enzmann, MJ Lan, E Lee, R Mi, R Martin • WO Patent 178191A2, 2024 • Patent • 2024</div>
           </article>
           <article class="pub-card">
             <h4 class="pub-title">
@@ -161,19 +161,19 @@
             <h4 class="pub-title">
               <a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ETbbsnoAAAAJ&sortby=pubdate&citation_for_view=ETbbsnoAAAAJ:W7OEmFMy1HYC" target="_blank" rel="noopener">P18. A NOVEL BIOENGINEERED CONDUIT REDUCES NEUROMA FORMATION AFTER TARGETED MUSCLE REINNERVATION</a>
             </h4>
-            <div class="pub-meta">E Lee, B Enzmann, T Harris, A Wong, S Pinni, N von Guionneau • Plastic and Reconstructive Surgery–Global Open 10 (4S), 57-58 • Abstract • 2022</div>
+            <div class="pub-meta">E Lee, B Enzmann, T Harris, A Wong, S Pinni, NV Guionneau, R Kothari, M Lan, C Qiu, <strong>A Zhou</strong>, A Lee, J Shores, A Latremoliere, L Qu, A Hoke, HQ Mao, S Tuffaha • Plastic and Reconstructive Surgery–Global Open 10 (4S), 57-58 • Abstract • 2022</div>
           </article>
           <article class="pub-card">
             <h4 class="pub-title">
               <a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ETbbsnoAAAAJ&sortby=pubdate&citation_for_view=ETbbsnoAAAAJ:eQOLeE2rZwMC" target="_blank" rel="noopener">QS51. Guiding the Way: The Use of a Bioengineered Conduit Reduces Neuroma Formation and Associated Pain Behaviors</a>
             </h4>
-            <div class="pub-meta">E Lee, B Enzmann, T Harris, A Wong, S Pinni, N von Guionneau • Plastic and Reconstructive Surgery–Global Open 10 (6S), 121 • Abstract • 2022</div>
+            <div class="pub-meta">E Lee, B Enzmann, T Harris, A Wong, S Pinni, NV Guionneau, R Kothari, M Lan, C Qiu, <strong>A Zhou</strong>, J Shores, A Latremoliere, L Qu, A Hoke, HQ Mao, S Tuffaha • Plastic and Reconstructive Surgery–Global Open 10 (6S), 121 • Abstract • 2022</div>
           </article>
           <article class="pub-card">
             <h4 class="pub-title">
               <a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ETbbsnoAAAAJ&sortby=pubdate&citation_for_view=ETbbsnoAAAAJ:qjMakFHDy7sC" target="_blank" rel="noopener">Improving nerve coaptation outcomes in targeted muscle reinnervation: a novel bioengineered device</a>
             </h4>
-            <div class="pub-meta">E Lee, AL Wong, S Pinni, N Von Guionneau, TGW Harris, R Kothari • Plastic and Reconstructive Surgery–Global Open 9 (10S), 99-100 • Abstract • 2021</div>
+            <div class="pub-meta">E Lee, AL Wong, S Pinni, NV Guionneau, TGW Harris, R Kothari, M Lan, B Enzmann, C Qiu, <strong>A Zhou</strong>, J Shores, A Latremoliere, A Hoke, HQ Mao, S Tuffaha • Plastic and Reconstructive Surgery–Global Open 9 (10S), 99-100 • Abstract • 2021</div>
           </article>
         </div>
       </section>
