--- a/experience.html
+++ b/experience.html
@@ -85,7 +85,7 @@
             <h3 class="exp-org">Stanford University School of Medicine</h3>
             <div class="exp-role">MD Candidate</div>
             <div class="exp-period">2024 – Present</div>
-            <div class="exp-details">Knight-Hennessy Scholar</div>
+            <div class="exp-details">Physician-Scientist Training Program (PSTP), Concentrations: Informatics & Data-driven Medicine, Surgery</div>
           </div>
         </div>
 
@@ -199,6 +199,17 @@
           </div>
         </div>
 
+        <div class="exp-item">
+          <div class="exp-logo">
+            <img src="images/neurotechharbor-logo.png" alt="NeuroTech Harbor">
+          </div>
+          <div class="exp-content">
+            <h3 class="exp-org">NeuroTech Harbor</h3>
+            <div class="exp-role">Outreach/Business Development</div>
+            <div class="exp-period">2022</div>
+          </div>
+        </div>
+        
         <div class="exp-item">
           <div class="exp-logo">
             <img src="images/healthadvances-logo.png" alt="Health Advances">
