Add hyperlinks to educational institutions

--- a/experience.html
+++ b/experience.html
@@ -82,7 +82,7 @@
             <img src="images/stanford-med-logo.png" alt="Stanford School of Medicine">
           </div>
           <div class="exp-content">
-            <h3 class="exp-org">Stanford University School of Medicine</h3>
+            <h3 class="exp-org"><a href="https://med.stanford.edu" target="_blank" rel="noopener">Stanford University School of Medicine</a></h3>
             <div class="exp-role">MD Candidate</div>
             <div class="exp-period">2024 – Present</div>
             <div class="exp-details">Physician-Scientist Training Program (PSTP), Concentrations: Informatics & Data-driven Medicine, Surgery</div>
@@ -94,7 +94,7 @@
             <img src="images/stanford-gsb-logo.png" alt="Stanford Graduate School of Business">
           </div>
           <div class="exp-content">
-            <h3 class="exp-org">Stanford University Graduate School of Business</h3>
+            <h3 class="exp-org"><a href="https://www.gsb.stanford.edu" target="_blank" rel="noopener">Stanford University Graduate School of Business</a></h3>
             <div class="exp-role">MBA Candidate</div>
             <div class="exp-details">Deferred Enrollment</div>
           </div>
@@ -105,7 +105,7 @@
             <img src="images/jhu-logo.png" alt="Johns Hopkins University">
           </div>
           <div class="exp-content">
-            <h3 class="exp-org">Johns Hopkins University</h3>
+            <h3 class="exp-org"><a href="https://www.jhu.edu" target="_blank" rel="noopener">Johns Hopkins University</a></h3>
             <div class="exp-role">BS, Biomedical Engineering</div>
             <div class="exp-period">2019 – 2022</div>
             <div class="exp-details">General Honors & Departmental Honors in Applied Mathematics and Statistics</div>
@@ -122,7 +122,7 @@
             <img src="images/microsoft-logo.png" alt="Microsoft">
           </div>
           <div class="exp-content">
-            <h3 class="exp-org">Microsoft Research</h3>
+            <h3 class="exp-org"><a href="https://www.microsoft.com/en-us/research/" target="_blank" rel="noopener">Microsoft Research</a></h3>
             <div class="exp-role">Research Intern, Health Futures</div>
             <div class="exp-period">2025</div>
           </div>
@@ -133,7 +133,7 @@
             <img src="images/schrodinger-logo.png" alt="Schrödinger">
           </div>
           <div class="exp-content">
-            <h3 class="exp-org">Schrödinger</h3>
+            <h3 class="exp-org"><a href="https://www.schrodinger.com" target="_blank" rel="noopener">Schrödinger</a></h3>
             <div class="exp-role">Pipeline Strategy</div>
             <div class="exp-period">2023</div>
           </div>
@@ -144,7 +144,7 @@
             <img src="images/invive-logo.png" alt="Invive">
           </div>
           <div class="exp-content">
-            <h3 class="exp-org">Invive</h3>
+            <h3 class="exp-org"><a href="https://www.invive.bio" target="_blank" rel="noopener">Invive</a></h3>
             <div class="exp-role">Market Intelligence</div>
             <div class="exp-period">2023</div>
           </div>
@@ -160,7 +160,7 @@
             <img src="images/pear-logo.png" alt="Pear VC">
           </div>
           <div class="exp-content">
-            <h3 class="exp-org">Pear VC</h3>
+            <h3 class="exp-org"><a href="https://www.pear.vc" target="_blank" rel="noopener">Pear VC</a></h3>
             <div class="exp-role">Venture Fellow, Healthcare + Biotech</div>
             <div class="exp-period">2025 – Present</div>
           </div>
@@ -171,7 +171,7 @@
             <img src="images/bain-logo.png" alt="Bain & Company">
           </div>
           <div class="exp-content">
-            <h3 class="exp-org">Bain & Company</h3>
+            <h3 class="exp-org"><a href="https://www.bain.com" target="_blank" rel="noopener">Bain & Company</a></h3>
             <div class="exp-role">Associate Consultant</div>
             <div class="exp-period">2023 – 2024</div>
           </div>
@@ -182,7 +182,7 @@
             <img src="images/arkitekt-logo.png" alt="Arkitekt Ventures">
           </div>
           <div class="exp-content">
-            <h3 class="exp-org">Arkitekt Ventures</h3>
+            <h3 class="exp-org"><a href="https://www.arkitektventures.com" target="_blank" rel="noopener">Arkitekt Ventures</a></h3>
             <div class="exp-role">Venture Fellow</div>
             <div class="exp-period">2023 – 2024</div>
           </div>
@@ -193,7 +193,7 @@
             <img src="images/jhtv-logo.png" alt="Johns Hopkins Technology Ventures">
           </div>
           <div class="exp-content">
-            <h3 class="exp-org">Johns Hopkins Technology Ventures</h3>
+            <h3 class="exp-org"><a href="https://ventures.jhu.edu" target="_blank" rel="noopener">Johns Hopkins Technology Ventures</a></h3>
             <div class="exp-role">Commercialization Fellow</div>
             <div class="exp-period">2020 – 2023</div>
           </div>
@@ -204,7 +204,7 @@
             <img src="images/neurotechharbor-logo.png" alt="NeuroTech Harbor">
           </div>
           <div class="exp-content">
-            <h3 class="exp-org">NeuroTech Harbor</h3>
+            <h3 class="exp-org"><a href="https://neurotechharbor.org" target="_blank" rel="noopener">NeuroTech Harbor</a></h3>
             <div class="exp-role">Outreach/Business Development</div>
             <div class="exp-period">2022</div>
           </div>
@@ -215,7 +215,7 @@
             <img src="images/healthadvances-logo.png" alt="Health Advances">
           </div>
           <div class="exp-content">
-            <h3 class="exp-org">Health Advances</h3>
+            <h3 class="exp-org"><a href="https://www.healthadvances.com" target="_blank" rel="noopener">Health Advances</a></h3>
             <div class="exp-role">Analyst Intern</div>
             <div class="exp-period">2022</div>
           </div>
