Update experience details formatting

--- a/experience.html
+++ b/experience.html
@@ -85,7 +85,7 @@
             <h3 class="exp-org"><a href="https://med.stanford.edu" target="_blank" rel="noopener">Stanford University School of Medicine</a></h3>
             <div class="exp-role">MD Candidate</div>
             <div class="exp-period">2024 – Present</div>
-            <div class="exp-details">Physician-Scientist Training Program (PSTP), Concentrations: Informatics & Data-driven Medicine, Surgery</div>
+            <div class="exp-details">Physician-Scientist Training Program (PSTP) · Concentrations: Informatics & Data-driven Medicine, Surgery</div>
           </div>
         </div>
 
