Update favicon links and fix minor details

--- a/experience.html
+++ b/experience.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Experience • Anson Zhou</title>
   <meta name="description" content="Professional and academic experience of Anson Zhou" />
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+  <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
   <style>
     :root{
       --bg:#ffffff;
@@ -85,7 +90,7 @@
             <h3 class="exp-org"><a href="https://med.stanford.edu" target="_blank" rel="noopener">Stanford University School of Medicine</a></h3>
             <div class="exp-role">MD Candidate</div>
             <div class="exp-period">2024 – Present</div>
-            <div class="exp-details">Physician-Scientist Training Program (PSTP) · Concentrations: Informatics & Data-driven Medicine, Surgery</div>
+            <div class="exp-details">Physician-Scientist Training Program (PSTP), Concentrations: Informatics & Data-driven Medicine, Surgery</div>
           </div>
         </div>
 
@@ -144,7 +149,7 @@
             <img src="images/invive-logo.png" alt="Invive">
           </div>
           <div class="exp-content">
-            <h3 class="exp-org"><a href="https://www.invive.io" target="_blank" rel="noopener">Invive</a></h3>
+            <h3 class="exp-org"><a href="https://www.invive.bio" target="_blank" rel="noopener">Invive</a></h3>
             <div class="exp-role">Market Intelligence</div>
             <div class="exp-period">2023</div>
           </div>
