--- a/media.html
+++ b/media.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Media • Anson Zhou</title>
   <meta name="description" content="Media appearances by Anson Zhou" />
+ 
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+  <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
   <style>
     :root{
       --bg:#ffffff;
