Add favicon links to publications.html
Added favicon links for various formats.

--- a/publications.html
+++ b/publications.html
@@ -5,6 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Publications • Anson Zhou</title>
   <meta name="description" content="Publications by Anson Zhou" />
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+  <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
+
   <style>
     :root{
       --bg:#ffffff;
