--- a/research.html
+++ b/research.html
@@ -5,6 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Research • Anson Zhou</title>
   <meta name="description" content="Research experience of Anson Zhou" />
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+  <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
+
   <style>
     :root{
       --bg:#ffffff;
@@ -70,7 +76,7 @@
       <div>Anson Zhou</div>
       <nav>
         <a href="/">Home</a>
-        <a href="/experiences.html">Experience</a>
+        <a href="/experience.html">Experience</a>
         <a href="/research.html">Research</a>
         <a href="/publications.html">Publications</a>        
         <a href="/media.html">Media</a>
