Update role description for Venture Fellow position

--- a/experience.html
+++ b/experience.html
@@ -166,7 +166,7 @@
           </div>
           <div class="exp-content">
             <h3 class="exp-org"><a href="https://www.pear.vc" target="_blank" rel="noopener">Pear VC</a></h3>
-            <div class="exp-role">Venture Fellow, Healthcare + Biotech</div>
+            <div class="exp-role">Venture Fellow (Healthcare + Biotech)</div>
             <div class="exp-period">2025 – Present</div>
           </div>
         </div>
