Add Google site verification meta tag
Added Google site verification meta tag for SEO.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <meta name="google-site-verification" content="Jv2dojL7TyicTgYpKTfRm43H6gt69KamoebfEyic3fc" />
+  
   <!-- ====== BASIC SEO ====== -->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
