--- a/experience.html
+++ b/experience.html
@@ -227,6 +227,84 @@
         </div>
       </section>
 
+      <!-- TEACHING SECTION -->
+      <section class="section">
+        <h2 class="section-title">Teaching</h2>
+        
+        <!-- Stanford -->
+        <div style="margin-bottom:32px">
+          <h3 style="font-size:16px;font-weight:700;color:var(--text);margin:0 0 12px 0">Stanford University</h3>
+          <div style="display:grid;gap:8px">
+            <div style="display:flex;justify-content:space-between;align-items:baseline;gap:16px">
+              <div style="color:var(--text)">Foundations of Cancer Biology and Pathology (INDE 210)</div>
+              <div style="color:var(--muted);font-size:14px;white-space:nowrap">WI '26</div>
+            </div>
+            <div style="display:flex;justify-content:space-between;align-items:baseline;gap:16px">
+              <div style="color:var(--text)">Introduction to Surgery (SURG 204)</div>
+              <div style="color:var(--muted);font-size:14px;white-space:nowrap">FA '25</div>
+            </div>
+            <div style="display:flex;justify-content:space-between;align-items:baseline;gap:16px">
+              <div style="color:var(--text)">Technical Training and Preparation for the Surgical Environment (SURG 205)</div>
+              <div style="color:var(--muted);font-size:14px;white-space:nowrap">FA '25, WI '26, SP '26</div>
+            </div>
+            <div style="display:flex;justify-content:space-between;align-items:baseline;gap:16px">
+              <div style="color:var(--text)">Practical Introduction to Surgical Research (SURG 238)</div>
+              <div style="color:var(--muted);font-size:14px;white-space:nowrap">WI '26</div>
+            </div>
+            <div style="display:flex;justify-content:space-between;align-items:baseline;gap:16px">
+              <div style="color:var(--text)">Practical Introduction to Surgical Management (SURG 239)</div>
+              <div style="color:var(--muted);font-size:14px;white-space:nowrap">SP '26</div>
+            </div>
+            <div style="display:flex;justify-content:space-between;align-items:baseline;gap:16px">
+              <div style="color:var(--text)">Needs Finding for Medical Students (MED 260)</div>
+              <div style="color:var(--muted);font-size:14px;white-space:nowrap">WI '26</div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Johns Hopkins -->
+        <div style="margin-bottom:32px">
+          <h3 style="font-size:16px;font-weight:700;color:var(--text);margin:0 0 12px 0">Johns Hopkins University</h3>
+          <div style="display:grid;gap:8px">
+            <div style="display:flex;justify-content:space-between;align-items:baseline;gap:16px">
+              <div style="color:var(--text)">Cell and Tissue Engineering Laboratory (580.452/754)</div>
+              <div style="color:var(--muted);font-size:14px;white-space:nowrap">FA '22</div>
+            </div>
+            <div style="display:flex;justify-content:space-between;align-items:baseline;gap:16px">
+              <div style="color:var(--text)">Social Entrepreneurship Theory & Practice (EN.660.329)</div>
+              <div style="color:var(--muted);font-size:14px;white-space:nowrap">FA '22</div>
+            </div>
+            <div style="display:flex;justify-content:space-between;align-items:baseline;gap:16px">
+              <div style="color:var(--text)">Biomaterials I (EN.510.316)</div>
+              <div style="color:var(--muted);font-size:14px;white-space:nowrap">SP '22</div>
+            </div>
+            <div style="display:flex;justify-content:space-between;align-items:baseline;gap:16px">
+              <div style="color:var(--text)">Biomedical Engineering Innovation (EN.500.130)</div>
+              <div style="color:var(--muted);font-size:14px;white-space:nowrap">SU '21</div>
+            </div>
+            <div style="display:flex;justify-content:space-between;align-items:baseline;gap:16px">
+              <div style="color:var(--text)">Structural Biology of Cells Laboratory (EN.580.153)</div>
+              <div style="color:var(--muted);font-size:14px;white-space:nowrap">SP '21</div>
+            </div>
+            <div style="display:flex;justify-content:space-between;align-items:baseline;gap:16px">
+              <div style="color:var(--text)">Biomedical Engineering and Design (580.111)</div>
+              <div style="color:var(--muted);font-size:14px;white-space:nowrap">FA '20</div>
+            </div>
+          </div>
+        </div>
+
+        <!-- MICA -->
+        <div>
+          <h3 style="font-size:16px;font-weight:700;color:var(--text);margin:0 0 12px 0">Maryland Institute College of Art</h3>
+          <div style="display:grid;gap:8px">
+            <div style="display:flex;justify-content:space-between;align-items:baseline;gap:16px">
+              <div style="color:var(--text)">Product Design Lab I (PRD 301)</div>
+              <div style="color:var(--muted);font-size:14px;white-space:nowrap">FA '20</div>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <!-- RESEARCH LINK -->
       <div style="margin-top:32px;padding-top:24px;border-top:2px solid var(--border);color:var(--muted)">
         See research experiences <a href="https://anson-zhou.github.io/research.html">here</a>
