Fix subtitle punctuation in experience.html

--- a/experience.html
+++ b/experience.html
@@ -76,7 +76,7 @@
 
     <main class="content-card">
       <h1>Experience</h1>
-      <p class="subtitle">Professional and academic background</p>
+      <p class="subtitle">Professional and academic background.</p>
 
       <!-- EDUCATION SECTION -->
       <section class="section">
