Update meta description for SEO enhancement

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Anson Zhou</title>
-  <meta name="description" content="Official website of Anson Zhou, Stanford MD/MBA candidate." />
+  <meta name="description" content="Anson Zhou is a Stanford MD/MBA candidate interested in healthcare, life sciences, AI/ML, and venture" />
   <meta name="keywords" content="Anson Zhou, Stanford, Knight-Hennessy, Microsoft, Bain, AI, MD, MBA, Healthcare, Medicine" />
   <link rel="canonical" href="https://anson-zhou.github.io/" />
 
