Add Clinical Summer Internship entry

--- a/experience.html
+++ b/experience.html
@@ -259,6 +259,10 @@
               <div style="color:var(--text)">Needs Finding for Medical Students (MED 260)</div>
               <div style="color:var(--muted);font-size:14px;white-space:nowrap">WI '26</div>
             </div>
+            <div style="display:flex;justify-content:space-between;align-items:baseline;gap:16px">
+              <div style="color:var(--text)">Clinical Summer Internship</div>
+              <div style="color:var(--muted);font-size:14px;white-space:nowrap">SU '25</div>
+            </div>
           </div>
         </div>
 
