--- a/experience.html
+++ b/experience.html
@@ -68,7 +68,7 @@
       <nav>
         <a href="/">Home</a>
         <a href="/experiences.html">Experience</a>
-        <a href="/research.html">Research</a>
+        <!-- <a href="/research.html">Research</a> -->
         <a href="/publications.html">Publications</a>        
         <a href="/media.html">Media</a>
       </nav>
@@ -236,16 +236,24 @@
           <h3 style="font-size:16px;font-weight:700;color:var(--text);margin:0 0 12px 0">Stanford University</h3>
           <div style="display:grid;gap:8px">
             <div style="display:flex;justify-content:space-between;align-items:baseline;gap:16px">
-              <div style="color:var(--text)">Foundations of Cancer Biology and Pathology (INDE 210)</div>
-              <div style="color:var(--muted);font-size:14px;white-space:nowrap">WI '26</div>
+              <div style="color:var(--text)">Clinical Summer Internship</div>
+              <div style="color:var(--muted);font-size:14px;white-space:nowrap">SU '25</div>
             </div>
+            <div style="display:flex;justify-content:space-between;align-items:baseline;gap:16px">
+              <div style="color:var(--text)">Technical Training and Preparation for the Surgical Environment (SURG 205)</div>
+              <div style="color:var(--muted);font-size:14px;white-space:nowrap">FA '25, WI '26, SP '26</div>
             <div style="display:flex;justify-content:space-between;align-items:baseline;gap:16px">
               <div style="color:var(--text)">Introduction to Surgery (SURG 204)</div>
               <div style="color:var(--muted);font-size:14px;white-space:nowrap">FA '25</div>
             </div>
             <div style="display:flex;justify-content:space-between;align-items:baseline;gap:16px">
-              <div style="color:var(--text)">Technical Training and Preparation for the Surgical Environment (SURG 205)</div>
-              <div style="color:var(--muted);font-size:14px;white-space:nowrap">FA '25, WI '26, SP '26</div>
+              <div style="color:var(--text)">Foundations of Cancer Biology and Pathology (INDE 210)</div>
+              <div style="color:var(--muted);font-size:14px;white-space:nowrap">WI '26</div>
+            </div>
+            <div style="display:flex;justify-content:space-between;align-items:baseline;gap:16px">
+              <div style="color:var(--text)">Needs Finding for Medical Students (MED 260)</div>
+              <div style="color:var(--muted);font-size:14px;white-space:nowrap">WI '26</div>
+            </div>
             </div>
             <div style="display:flex;justify-content:space-between;align-items:baseline;gap:16px">
               <div style="color:var(--text)">Practical Introduction to Surgical Research (SURG 238)</div>
@@ -254,14 +262,6 @@
             <div style="display:flex;justify-content:space-between;align-items:baseline;gap:16px">
               <div style="color:var(--text)">Practical Introduction to Surgical Management (SURG 239)</div>
               <div style="color:var(--muted);font-size:14px;white-space:nowrap">SP '26</div>
-            </div>
-            <div style="display:flex;justify-content:space-between;align-items:baseline;gap:16px">
-              <div style="color:var(--text)">Needs Finding for Medical Students (MED 260)</div>
-              <div style="color:var(--muted);font-size:14px;white-space:nowrap">WI '26</div>
-            </div>
-            <div style="display:flex;justify-content:space-between;align-items:baseline;gap:16px">
-              <div style="color:var(--text)">Clinical Summer Internship</div>
-              <div style="color:var(--muted);font-size:14px;white-space:nowrap">SU '25</div>
             </div>
           </div>
         </div>
