--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       <nav>
         <a href="/">Home</a>
         <a href="/experience.html">Experience</a>
-        <a href="/research.html">Research</a>
+        <!-- <a href="/research.html">Research</a> -->
         <a href="/publications.html">Publications</a>        
         <a href="/media.html">Media</a>
         
