--- a/media.html
+++ b/media.html
@@ -70,7 +70,7 @@
       <nav>
         <a href="/">Home</a>
         <a href="/experience.html">Experience</a>
-        <a href="/research.html">Research</a>
+        <!-- <a href="/research.html">Research</a> -->
         <a href="/publications.html">Publications</a>        
         <a href="/media.html">Media</a>
       </nav>
