--- a/experience.html
+++ b/experience.html
@@ -67,7 +67,7 @@
       <div>Anson Zhou</div>
       <nav>
         <a href="/">Home</a>
-        <a href="/experiences.html">Experience</a>
+        <a href="/experience.html">Experience</a>
         <!-- <a href="/research.html">Research</a> -->
         <a href="/publications.html">Publications</a>        
         <a href="/media.html">Media</a>
